# mikecalligaro

./: .gitignore
FindDupes/: FindDupes.csproj  FindDupes.sln  Program.cs
FindDupes/Properties/: AssemblyInfo.cs
React/first/: index.html  persistence.html
React/js api/: index.html  scripts.js
React/react-tutorial/: package-lock.json
React/react-tutorial/src/: Api.js  App.js  Form.js  Table.js  index.js
Slashrev/: Slashrev.sln
Slashrev/Slashrev/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Slashrev.csproj
Slashrev/Slashrev/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
interviews/linkedlist/cpp/: readme.txt
interviews/linkedlist/cpp/ll/: ll.cpp  ll.sln  ll.vcxproj  ll.vcxproj.filters
interviews/linkedlist/cs/ll/: ll.cs  ll.sln  readme.txt
interviews/linkedlist/js/: ll.htm  ll.js  readme.txt
interviews/linkedlist/py/: ll.py  readme.txt
interviews/tetris/cs/tet/: tet.cs  tet.sln
interviews/tictactoe/c#/ttt/: Program.cs  readme.txt  ttt.sln
interviews/tictactoe/cpp/ttt/: readme.txt  (+4 more)
interviews/tictactoe/js/: readme.txt
rust/collections/: Cargo.toml
rust/collections/src/: main.rs
rust/functions/: Cargo.toml
rust/functions/src/: main.rs
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello-rust/: Cargo.toml
rust/rectangles/: Cargo.toml
rust/rectangles/src/: main.rs
rust/rpncalc/: Cargo.toml
rust/rpncalc/src/: main.rs
rust/structs/: Cargo.toml
rust/structs/src/: main.rs
rust/variables/: Cargo.toml
rust/variables/src/: main.rs
rust/workshop/: readme.txt
(+9 files in other folders)
