[package]
name = "rpncalc"
version = "0.1.0"
authors = ["Mike Calligaro <mikecalliagaro@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = { path = "../../../native-windows-gui/native-windows-gui/" }
native-windows-derive = { path = "../../../native-windows-gui/native-windows-derive/" }
